--- a/src/components/organisms/app-header/app-header.scss
+++ b/src/components/organisms/app-header/app-header.scss
@@ -6,23 +6,25 @@ header {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  background: var(--header__background--color, #FFF);
+  background: var(--header__bg--color, #FFF);
   color: var(--header__text--color, #000);
-  height: var(--header__content, 3.5rem);
-  box-shadow: 0 2px 5px 0 var(--header__box-shadow--color, rgba(0, 0, 0, 0.26));
+  height: var(--header__content, auto);
+  box-shadow: rem(0 2px 5px 0) var(--header__box-shadow--color, rgba(0, 0, 0, 0.26));
   .header__left {
     display: flex;
+    flex-direction: row;
     img {
-      .header__logo {
-        width: var(--header__logo--width, 3.125rem);
-        
+      &.header__logo {
+        align-self: center;
+        width: var(--header__logo--width, rem(55px));
+        height: rem(40px);
       }
     }
     h1 {
       font-size: 1.4rem;
       font-weight: 500;
       color: var(--header__text--color, #000);
-      padding: 0 0.75rem;
+      padding: rem(0px 12px);
     }
   }
   .header__right {
